--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/dist-server
 /tmp
-/out-tsc
 
 # dependencies
 /node_modules
+server/node_modules
 
 # IDEs and editors
 /.idea
@@ -16,7 +14,6 @@
 .c9/
 *.launch
 .settings/
-*.sublime-workspace
 
 # IDE - VSCode
 .vscode/*
@@ -28,17 +25,22 @@
 # misc
 /.sass-cache
 /connect.lock
-/coverage
+/coverage/*
 /libpeerconnection.log
 npm-debug.log
-yarn-error.log
 testem.log
 /typings
+/uploads
 
 # e2e
 /e2e/*.js
 /e2e/*.map
 
-# System Files
+#System Files
 .DS_Store
 Thumbs.db
+
+#Secrete
+.env
+.yaml
+
