--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-dev": "ng build --target=development --environment=dev",
+    "build-qa": "ng build --target=production --environment=qa",
+    "build-prod": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +24,19 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "amazon-cognito-identity-js": "^2.0.3",
+    "aws-sdk": "^2.224.1",
+    "bootstrap": "^4.1.0",
+    "bootstrap-sass": "^3.3.7",
+    "core-js": "^2.5.5",
+    "cors": "^2.8.4",
+    "jquery": "^3.3.1",
+    "ng2-slim-loading-bar": "^4.0.0",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
+    "webpack": "^3.11.0",
+    "xlsx": "^0.12.9",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
